--- a/bia/buscador/templates/buscador/home.html
+++ b/bia/buscador/templates/buscador/home.html
@@ -1,12 +1,14 @@
 {% extends "buscador/base_page.html" %}
-{% block title %}Página de inicio{% endblock %}
+{% block title %}Búsqueda de Información Autómatica{% endblock %}
 {% block content %}
 <div class="note note-info">
-  <h4 class="block">Contenido en desarrollo</h4>
-  <p>Esta sección esta siendo desarrollada.</p>
+  <h4 class="block">Contenidos en desarrollo</h4>
+  <p>Hola {{ request.user }}, <br>
+    En esta plataforma usted podrá buscar materiales los cuales se le presentarán en base a su perfil cognitivo. Utilice las funcionalidades activas para desplazarse por el sistema.
+    <br>Prontamente se agregarán algunas funcionalidades tales como:
+    <br>  - Nombre de Usuario personalizado
+
+  </p>
   <br>
-  <center>
-    <i class="fa fa-spinner fa-pulse fa-3x"></i>
-  </center>
 </div>
 {% endblock %}
