--- a/bia/buscador/templates/buscador/base_wrapper.html
+++ b/bia/buscador/templates/buscador/base_wrapper.html
@@ -31,7 +31,7 @@
         <link href="{% static 'buscador/layouts/layout/css/themes/darkblue.min.css' %}" rel="stylesheet" type="text/css" id="style_color" />
         <link href="{% static 'buscador/layouts/layout/css/custom.min.css' %}" rel="stylesheet" type="text/css" />
         <!-- END THEME LAYOUT STYLES -->
-        <link rel="shortcut icon" href="{% static 'favicon.ico' %}" /> </head>
+        <link rel="shortcut icon" href="{% static 'buscador/favicon.ico' %}" /> </head>
     <!-- END HEAD -->
 
     <body class="page-header-fixed page-sidebar-closed-hide-logo page-content-white">
@@ -42,8 +42,8 @@
                 <div class="page-header-inner ">
                     <!-- BEGIN LOGO -->
                     <div class="page-logo">
-                        <a href="{% url 'buscador:home' %}">
-                            <img src="{% static 'buscador/layouts/layout/img/logo-big.png' %}" alt="logo" class="logo-default" /> </a>
+                        <a href="{% url 'buscador:home' %}" class="center">
+                            </a>
                         <div class="menu-toggler sidebar-toggler">
                             <span></span>
                         </div>
@@ -52,13 +52,13 @@
                         <span></span>
                     </a>
                     <div class="top-menu">
-                        {% if client %}
+                        {% if request.user.profile %}
                         <ul class="nav navbar-nav pull-right">
                             <li class="dropdown dropdown-user">
                                 <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
                                     <img alt="" class="img-circle"  src="{% static 'buscador/layouts/layout/img/avatar.png' %}" width="29px">
                                     <!-- TODO: Agregar nombre usuario -->
-                                    <span class="username username-hide-on-mobile"> NOMBRE USUARIO </span>
+                                    <span class="username username-hide-on-mobile"> {{request.user.profile.full_name}} </span>
                                     <i class="fa fa-angle-down"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-default">
@@ -66,6 +66,12 @@
                                         <!-- TODO: Hacer página de perfil -->
                                         <a href="">
                                             <i class="icon-user"></i> Mi perfil
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <!-- TODO: Hacer página de perfil -->
+                                        <a href="{% url 'buscador:kolb' %}?client_id={{request.user.profile.pk}}">
+                                            <i class="icon-directions"></i> Encuesta de Kolb
                                         </a>
                                     </li>
                                     <li class="divider"> </li>
@@ -79,10 +85,10 @@
                         </ul>
                         {% else %}
                         <!-- TODO: Hacer inicio de sesion y registro -->
-                        <a href="" class="btn btn-danger pull-right">
+                        <a href="{% url 'buscador:register' %}" class="btn btn-danger pull-right">
                           <span>Registrarme</span>
                         </a>
-                        <a href="" class="btn btn-warning pull-right">
+                        <a href="{% url 'buscador:login' %}" class="btn btn-warning pull-right">
                           <span>Iniciar Sesion</span>
                         </a>
                         {% endif %}
@@ -118,25 +124,6 @@
                             </li>
                             <!-- END SIDEBAR TOGGLER BUTTON -->
                             <!-- DOC: To remove the search box from the sidebar you just need to completely remove the below "sidebar-search-wrapper" LI element -->
-                            <li class="sidebar-search-wrapper">
-                                <!-- BEGIN RESPONSIVE QUICK SEARCH FORM -->
-                                <!-- DOC: Apply "sidebar-search-bordered" class the below search form to have bordered search box -->
-                                <!-- DOC: Apply "sidebar-search-bordered sidebar-search-solid" class the below search form to have bordered & solid search box -->
-                                <form class="sidebar-search  " action="page_general_search_3.html" method="POST">
-                                    <a href="javascript:;" class="remove">
-                                        <i class="icon-close"></i>
-                                    </a>
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" placeholder="Search...">
-                                        <span class="input-group-btn">
-                                            <a href="javascript:;" class="btn submit">
-                                                <i class="icon-magnifier"></i>
-                                            </a>
-                                        </span>
-                                    </div>
-                                </form>
-                                <!-- END RESPONSIVE QUICK SEARCH FORM -->
-                            </li>
                             <li class="nav-item start {% if dashboard %}active{% endif %}">
                                 <a href="{% url 'buscador:home' %}" class="nav-link">
                                     <i class="icon-bag"></i>
@@ -149,16 +136,57 @@
                             <li class="nav-item">
                                 <a href="javascript:;" class="nav-link nav-toggle">
                                     <i class="icon-layers"></i>
-                                    <span class="title">Administrador de Datos</span>
+                                    <span class="title">Funcionalidades</span>
                                     <span class="arrow"></span>
                                 </a>
                                 <ul class="sub-menu">
-                                    <li class="nav-item">
-                                        <a href="" class="nav-link">
-                                            <i class="icon-users"></i>
-                                            <span class="title">Usuarios</span>
-                                        </a>
-                                    </li>
+                                  {% if request.user.profile %}
+                                  <li class="nav-item">
+                                      <a href="" class="nav-link">
+                                          <i class="icon-users"></i>
+                                          <span class="title">Perfil</span>
+                                      </a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a href="{% url 'buscador:kolb' %}?client_id={{request.user.profile.pk}}" class="nav-link">
+                                          <i class="icon-directions"></i>
+                                          <span class="title">Encuesta de Kolb</span>
+                                      </a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a href="" class="nav-link">
+                                          <i class="icon-magnifier"></i>
+                                          <span class="title">Buscador</span>
+                                      </a>
+                                  </li>
+                                  {% if client.is_moderator %}
+                                  <li class="nav-item">
+                                      <a href="" class="nav-link">
+                                          <i class="icon-cloud-upload"></i>
+                                          <span class="title">Subir material</span>
+                                      </a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a href="" class="nav-link">
+                                          <i class="icon-docs"></i>
+                                          <span class="title">Subir fuentes externas</span>
+                                      </a>
+                                  </li>
+                                  {% endif %}
+                                  {% else %}
+                                  <li class="nav-item">
+                                      <a href="{% url 'buscador:login' %}" class="nav-link">
+                                          <i class="icon-login"></i>
+                                          <span class="title">Iniciar sesion</span>
+                                      </a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a href="{% url 'buscador:register' %}" class="nav-link">
+                                          <i class="icon-note"></i>
+                                          <span class="title">Registrarse</span>
+                                      </a>
+                                  </li>
+                                  {% endif %}
                                 </ul>
                             </li>
                         </ul>
@@ -181,7 +209,7 @@
             <!-- END CONTAINER -->
             <!-- BEGIN FOOTER -->
             <div class="page-footer">
-                <div class="page-footer-inner"> 2016 &copy; Fyx Inc</div>
+                <div class="page-footer-inner"> 2008-2017 &copy; rCasanueva </div>
                 <div class="scroll-to-top">
                     <i class="icon-arrow-up"></i>
                 </div>
