--- a/bia/buscador/templates/buscador/base_wrapper.html
+++ b/bia/buscador/templates/buscador/base_wrapper.html
@@ -64,7 +64,7 @@
                                 <ul class="dropdown-menu dropdown-menu-default">
                                     <li>
                                         <!-- TODO: Hacer página de perfil -->
-                                        <a href="">
+                                        <a href="{% url 'buscador:building' %}">
                                             <i class="icon-user"></i> Mi perfil
                                         </a>
                                     </li>
@@ -77,7 +77,7 @@
                                     <li class="divider"> </li>
                                     <li>
                                         <!-- TODO: Hacer funcion de deslogeo -->
-                                        <a href="">
+                                        <a href="{% url 'buscador:logout' %}">
                                             <i class="icon-key"></i> Cerrar Sesión </a>
                                     </li>
                                 </ul>
@@ -142,7 +142,7 @@
                                 <ul class="sub-menu">
                                   {% if request.user.profile %}
                                   <li class="nav-item">
-                                      <a href="" class="nav-link">
+                                      <a href="{% url 'buscador:building' %}" class="nav-link">
                                           <i class="icon-users"></i>
                                           <span class="title">Perfil</span>
                                       </a>
@@ -154,25 +154,31 @@
                                       </a>
                                   </li>
                                   <li class="nav-item">
-                                      <a href="" class="nav-link">
+                                      <a href="{% url 'buscador:building' %}" class="nav-link">
                                           <i class="icon-magnifier"></i>
                                           <span class="title">Buscador</span>
                                       </a>
                                   </li>
                                   {% if client.is_moderator %}
                                   <li class="nav-item">
-                                      <a href="" class="nav-link">
+                                      <a href="{% url 'buscador:building' %}" class="nav-link">
                                           <i class="icon-cloud-upload"></i>
                                           <span class="title">Subir material</span>
                                       </a>
                                   </li>
                                   <li class="nav-item">
-                                      <a href="" class="nav-link">
+                                      <a href="{% url 'buscador:building' %}" class="nav-link">
                                           <i class="icon-docs"></i>
                                           <span class="title">Subir fuentes externas</span>
                                       </a>
                                   </li>
                                   {% endif %}
+                                  <li class="nav-item">
+                                      <a href="{% url 'buscador:logout' %}" class="nav-link">
+                                          <i class="icon-key"></i>
+                                          <span class="title">Cerrar Sesión</span>
+                                      </a>
+                                  </li>
                                   {% else %}
                                   <li class="nav-item">
                                       <a href="{% url 'buscador:login' %}" class="nav-link">
