--- a/bia/buscador/templates/buscador/base_wrapper.html
+++ b/bia/buscador/templates/buscador/base_wrapper.html
@@ -64,7 +64,7 @@
                                 <ul class="dropdown-menu dropdown-menu-default">
                                     <li>
                                         <!-- TODO: Hacer página de perfil -->
-                                        <a href="{% url 'buscador:building' %}">
+                                        <a href="{% url 'buscador:profile' request.user.profile.pk %}">
                                             <i class="icon-user"></i> Mi perfil
                                         </a>
                                     </li>
@@ -126,7 +126,7 @@
                             <!-- DOC: To remove the search box from the sidebar you just need to completely remove the below "sidebar-search-wrapper" LI element -->
                             <li class="nav-item start {% if dashboard %}active{% endif %}">
                                 <a href="{% url 'buscador:home' %}" class="nav-link">
-                                    <i class="icon-bag"></i>
+                                    <i class="icon-home"></i>
                                     <span class="title">Inicio</span>
                                 </a>
                             </li>
@@ -142,9 +142,9 @@
                                 <ul class="sub-menu">
                                   {% if request.user.profile %}
                                   <li class="nav-item">
-                                      <a href="{% url 'buscador:building' %}" class="nav-link">
+                                      <a href="{% url 'buscador:profile' request.user.profile.pk %}" class="nav-link">
                                           <i class="icon-users"></i>
-                                          <span class="title">Perfil</span>
+                                          <span class="title">Mi Perfil</span>
                                       </a>
                                   </li>
                                   <li class="nav-item">
@@ -159,7 +159,7 @@
                                           <span class="title">Buscador</span>
                                       </a>
                                   </li>
-                                  {% if client.is_moderator %}
+                                  {% if request.user.profile.is_moderator %}
                                   <li class="nav-item">
                                       <a href="{% url 'buscador:building' %}" class="nav-link">
                                           <i class="icon-cloud-upload"></i>
