--- a/bia/administracion/templates/administracion/base_wrapper.html
+++ b/bia/administracion/templates/administracion/base_wrapper.html
@@ -168,7 +168,25 @@
                                   </li>
                                   <li class="nav-item">
                                       <a href="{% url 'buscador:building' %}" class="nav-link">
+                                          <i class="icon-tag"></i>
+                                          <span class="title">Gestor de Tags</span>
+                                      </a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a href="{% url 'buscador:building' %}" class="nav-link">
+                                          <i class="icon-drawer"></i>
+                                          <span class="title">Gestor de Tipos</span>
+                                      </a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a href="{% url 'buscador:building' %}" class="nav-link">
                                           <i class="icon-docs"></i>
+                                          <span class="title">Gestor de Archivos</span>
+                                      </a>
+                                  </li>
+                                  <li class="nav-item">
+                                      <a href="{% url 'buscador:building' %}" class="nav-link">
+                                          <i class="icon-link"></i>
                                           <span class="title">Subir fuentes externas</span>
                                       </a>
                                   </li>
