--- a/bia/administracion/templates/administracion/upload.html
+++ b/bia/administracion/templates/administracion/upload.html
@@ -2,7 +2,9 @@
 {% load static %}
 <!-- CSS -->
 {% block plugin_css %}
-<link href="{% static 'buscador/global/plugins/bootstrap-datepicker/css/bootstrap-datepicker3.min.css' %}" rel="stylesheet" type="text/css" />
+<link href="{% static 'buscador/global/plugins/select2/css/select2.min.css' %}" rel="stylesheet" type="text/css" />
+<link href="{% static 'buscador/global/plugins/select2/css/select2-bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
+<link href="{% static 'buscador/global/plugins/bootstrap-fileinput/bootstrap-fileinput.css' %}" rel="stylesheet" type="text/css" />
 {% endblock %}
 <!-- No variar -->
 {% block title %}Búsqueda de Información Autómatica{% endblock %}
@@ -12,77 +14,179 @@
 {% block page_actions %}{% endblock %}
 <!-- Contenido -->
 {% block content %}
-<div class="portlet box red">
-    <div class="portlet-title">
-        <div class="caption">
-            <i class="fa fa-gift"></i>Formulario de archivos</div>
-        <div class="tools">
-            <a href="javascript:;" class="collapse"> </a>
-            <a href="javascript:;" class="remove"> </a>
+<div class="row">
+    <div class="col-md-12">
+        <div class="m-heading-1 border-red m-bordered">
+            <h3>¡Atención!</h3>
+            <p> Este gestor de subida de archivos se encuentra en etapa de desarrollo por lo que debe ser utilizado solo con los pasos
+                correctos. Si existe una parte incorrecta, el gestor lo obligará a rellenar todo nuevamente.</p>
         </div>
-    </div>
-    <div class="portlet-body form">
-        <div class="form-body">
-            <div class="form-group">
-                <form action="#" class="mt-repeater form-horizontal">
-                    <h3 class="mt-repeater-title">Testing Form</h3>
-                    <div data-repeater-list="group-a">
-                        <div data-repeater-item class="mt-repeater-item">
-                            <!-- jQuery Repeater Container -->
-                            <div class="mt-repeater-input">
-                                <label class="control-label">Name</label>
-                                <br/>
-                                <input type="text" name="text-input" class="form-control" value="John Smith" /> </div>
-                            <div class="mt-repeater-input">
-                                <label class="control-label">Joined Date</label>
-                                <br/>
-                                <input class="input-group form-control form-control-inline date date-picker" size="16" type="text" value="01/08/2016" name="date-input" data-date-format="dd/mm/yyyy" /> </div>
-                            <div class="mt-repeater-input mt-repeater-textarea">
-                                <label class="control-label">Job Description</label>
-                                <br/>
-                                <textarea name="textarea-input" class="form-control" rows="3">This role is to follow up with all meetings and ensure that each operational process flow moves accordingly in a timely manner.</textarea>
+        <div class="portlet light bordered" id="form_wizard_1">
+            <div class="portlet-title">
+                <div class="caption">
+                    <i class=" icon-layers font-yellow"></i>
+                    <span class="caption-subject font-green bold uppercase"> Gestion de archivos -
+                        <span class="step-title"> Step 1 of 4 </span>
+                    </span>
+                </div>
+            </div>
+            <div class="portlet-body form">
+                <form class="form-horizontal" action="{% url 'administracion:receiver' %}" id="submit_form" method="POST" enctype="multipart/form-data">{% csrf_token %}
+                    <div class="form-wizard">
+                        <div class="form-body">
+                            <ul class="nav nav-pills nav-justified steps">
+                                <li>
+                                    <a href="#tab1" data-toggle="tab" class="step">
+                                        <span class="number"> 1 </span>
+                                        <span class="desc">
+                                            <i class="fa fa-check"></i> Información del archivo </span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#tab2" data-toggle="tab" class="step">
+                                        <span class="number"> 2 </span>
+                                        <span class="desc">
+                                            <i class="fa fa-check"></i> Subida de archivo </span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#tab3" data-toggle="tab" class="step active">
+                                        <span class="number"> 3 </span>
+                                        <span class="desc">
+                                            <i class="fa fa-check"></i> Categorización </span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#tab4" data-toggle="tab" class="step">
+                                        <span class="number"> 4 </span>
+                                        <span class="desc">
+                                            <i class="fa fa-check"></i> Confirmación </span>
+                                    </a>
+                                </li>
+                            </ul>
+                            <div id="bar" class="progress progress-striped" role="progressbar">
+                                <div class="progress-bar progress-bar-success"> </div>
                             </div>
-                            <div class="mt-repeater-input mt-radio-inline">
-                                <label class="control-label">Tier</label>
-                                <br/>
-                                <label class="mt-radio">
-                                    <input type="radio" name="optionsRadios" id="optionsRadios25" value="junior" checked=""> Junior
-                                    <span></span>
-                                </label>
-                                <label class="mt-radio">
-                                    <input type="radio" name="optionsRadios" id="optionsRadios26" value="senior" checked=""> Senior
-                                    <span></span>
-                                </label>
+                            <div class="tab-content">
+                                {% if error %}
+                                <div class="alert alert-danger">
+                                    <button class="close" data-dismiss="alert"></button> Hubo un problema con el archivo o los datos ingresados fueron inconsistentes. </div>
+                                {% endif %}
+                                <div class="alert alert-danger display-none">
+                                    <button class="close" data-dismiss="alert"></button> Tienes errores, verifica abajo. </div>
+                                <div class="alert alert-success display-none">
+                                    <button class="close" data-dismiss="alert"></button> Se validó correctamente la información </div>
+                                <div class="tab-pane active" id="tab1">
+                                    <h3 class="block">Entregar la información escencial del archivo</h3>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">Nombre
+                                            <span class="required"> * </span>
+                                        </label>
+                                        <div class="col-md-4">
+                                            <input type="text" class="form-control" name="username" />
+                                            <span class="help-block"> Escribe un nombre para el archivo </span>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">Descripcion
+                                        </label>
+                                        <div class="col-md-4">
+                                            <textarea type="text" class="form-control" name="descripcion"></textarea>
+                                            <span class="help-block"> Escribe una breve descripcion de no más de 300 letras. Puede quedar vacio.</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tab-pane" id="tab2">
+                                    <h3 class="block">Eliga un archivo</h3>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">Archivo</label>
+                                        <div class="fileinput fileinput-new" data-provides="fileinput">
+                                            <div class="input-group input-large">
+                                                <div class="form-control uneditable-input input-fixed input-medium" data-trigger="fileinput">
+                                                    <i class="fa fa-file fileinput-exists"></i>&nbsp;
+                                                    <span class="fileinput-filename"> </span>
+                                                </div>
+                                                <span class="input-group-addon btn default btn-file">
+                                                    <span class="fileinput-new"> Select file </span>
+                                                    <span class="fileinput-exists"> Change </span>
+                                                    <input type="file" name="fullname"> </span>
+                                                <a href="javascript:;" class="input-group-addon btn red fileinput-exists" data-dismiss="fileinput"> Remove </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tab-pane" id="tab3">
+                                    <h3 class="block">Categorice al archivo según corresponda</h3>
+                                    <div class="m-heading-1 border-yellow m-bordered">
+                                        <h3>¡Atención!</h3>
+                                        <p> Momentaneamente esta parte se encuentra restringida y se permite la categorización en etapas posteriores (Una vez el archivo ya esté subido).</p>
+                                    </div>
+                                    <!-- TODO: Para agregar un campo de verificacion mirar Metronic Form Wizzard y cambiar nombres segun eso -->
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">Tipo de archivo
+                                            <span class="required"> * </span>
+                                        </label>
+                                        <div class="col-md-4">
+                                            <input type="text" class="form-control" name="a1" readonly/>
+                                            <span class="help-block"> </span>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">Tag de archivo
+                                            <span class="required"> * </span>
+                                        </label>
+                                        <div class="col-md-4">
+                                            <input type="text" class="form-control" name="a2" readonly/>
+                                            <span class="help-block"> </span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tab-pane" id="tab4">
+                                    <h3 class="block">Confirme los datos ingresados</h3>
+                                    <h4 class="form-section">Información</h4>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">Nombre:</label>
+                                        <div class="col-md-4">
+                                            <p class="form-control-static" data-display="username"> </p>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">Descripción:</label>
+                                        <div class="col-md-4">
+                                            <p class="form-control-static" data-display="descripcion"> </p>
+                                        </div>
+                                    </div>
+                                    <h4 class="form-section">Categorización</h4>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">Tipo archivo:</label>
+                                        <div class="col-md-4">
+                                            <p class="form-control-static" data-display="a1"> </p>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">Tag archivo:</label>
+                                        <div class="col-md-4">
+                                            <p class="form-control-static" data-display="a2"> </p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="mt-repeater-input mt-checkbox-inline">
-                                <label class="control-label">Language</label>
-                                <br/>
-                                <label class="mt-checkbox">
-                                    <input type="checkbox" id="inlineCheckbox21" value="option1"> English
-                                    <span></span>
-                                </label>
-                                <label class="mt-checkbox">
-                                    <input type="checkbox" id="inlineCheckbox22" value="option2"> French
-                                    <span></span>
-                                </label>
-                            </div>
-                            <div class="mt-repeater-input">
-                                <label class="control-label">Department</label>
-                                <br/>
-                                <select name="select-input" class="form-control">
-                                    <option value="A" selected>Marketing</option>
-                                    <option value="B">Creative</option>
-                                    <option value="C">Development</option>
-                                </select>
-                            </div>
-                            <div class="mt-repeater-input">
-                                <a href="javascript:;" data-repeater-delete class="btn btn-danger mt-repeater-delete">
-                                    <i class="fa fa-close"></i> Delete</a>
+                        </div>
+                        <div class="form-actions">
+                            <div class="row">
+                                <div class="col-md-offset-3 col-md-9">
+                                    <a href="javascript:;" class="btn default button-previous">
+                                        <i class="fa fa-angle-left"></i> Back </a>
+                                    <a href="javascript:;" class="btn btn-outline green button-next"> Continue
+                                        <i class="fa fa-angle-right"></i>
+                                    </a>
+                                    <button type="submit" class="btn green button-submit"> Enviar
+                                        <i class="fa fa-check"></i>
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <a href="javascript:;" data-repeater-create class="btn btn-success mt-repeater-add">
-                        <i class="fa fa-plus"></i> Add</a>
                 </form>
             </div>
         </div>
@@ -91,8 +195,10 @@
 {% endblock %}
 <!-- JavaScript -->
 {% block plugin_js %}
-<script src="{% static 'buscador/global/plugins/jquery-repeater/jquery.repeater.js' %}" type="text/javascript"></script>
-<script src="{% static 'buscador/global/plugins/bootstrap-datepicker/js/bootstrap-datepicker.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'buscador/pages/scripts/form-repeater.js' %}" type="text/javascript"></script>
-<script src="{% static 'buscador/pages/scripts/components-date-time-pickers.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'buscador/global/plugins/select2/js/select2.full.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'buscador/global/plugins/jquery-validation/js/jquery.validate.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'buscador/global/plugins/jquery-validation/js/additional-methods.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'buscador/global/plugins/bootstrap-wizard/jquery.bootstrap.wizard.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'buscador/pages/scripts/form-wizard.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'buscador/global/plugins/bootstrap-fileinput/bootstrap-fileinput.js' %}" type="text/javascript"></script>
 {% endblock %}
