--- a/bia/buscador/templates/buscador/base_wrapper.html
+++ b/bia/buscador/templates/buscador/base_wrapper.html
@@ -167,7 +167,7 @@
                                       </a>
                                   </li>
                                   <li class="nav-item">
-                                      <a href="{% url 'buscador:building' %}" class="nav-link">
+                                      <a href="{% url 'administracion:tags' %}" class="nav-link">
                                           <i class="icon-tag"></i>
                                           <span class="title">Gestor de Tags</span>
                                       </a>
