--- a/bia/buscador/templates/buscador/base_wrapper.html
+++ b/bia/buscador/templates/buscador/base_wrapper.html
@@ -173,7 +173,7 @@
                                       </a>
                                   </li>
                                   <li class="nav-item">
-                                      <a href="{% url 'buscador:building' %}" class="nav-link">
+                                      <a href="{% url 'administracion:types' %}" class="nav-link">
                                           <i class="icon-drawer"></i>
                                           <span class="title">Gestor de Tipos</span>
                                       </a>
