--- a/bia/administracion/templates/administracion/base_wrapper.html
+++ b/bia/administracion/templates/administracion/base_wrapper.html
@@ -185,6 +185,12 @@
                                       </a>
                                   </li>
                                   <li class="nav-item">
+                                      <a href="{% url 'buscador:ann' %}" class="nav-link">
+                                          <i class="icon-speedometer"></i>
+                                          <span class="title">Red Neuronal</span>
+                                      </a>
+                                  </li>
+                                  <li class="nav-item">
                                       <a href="{% url 'buscador:building' %}" class="nav-link">
                                           <i class="icon-link"></i>
                                           <span class="title">Subir fuentes externas</span>
