--- a/bia/administracion/templates/administracion/base_wrapper.html
+++ b/bia/administracion/templates/administracion/base_wrapper.html
@@ -191,7 +191,7 @@
                                       </a>
                                   </li>
                                   <li class="nav-item">
-                                      <a href="{% url 'buscador:building' %}" class="nav-link">
+                                      <a href="{% url 'administracion:external' %}" class="nav-link">
                                           <i class="icon-link"></i>
                                           <span class="title">Subir fuentes externas</span>
                                       </a>
