--- a/bia/buscador/templates/buscador/ann.html
+++ b/bia/buscador/templates/buscador/ann.html
@@ -21,7 +21,7 @@
     </div>
     <div class="col-md-12">
       <label class="col-md-6">Precisión estimada:</label>
-      <span class="col-md-6">{{data_amount}}%</span>
+      <span class="col-md-6">{{l_rate}}%</span>
     </div>
   </div>
   <div class="col-md-6">
