--- a/bia/buscador/templates/buscador/user_profile.html
+++ b/bia/buscador/templates/buscador/user_profile.html
@@ -208,7 +208,7 @@
                                         <td class="fit">
                                         </td>
                                         <td>
-                                            <a href="{% url 'buscador:building' %}" class="primary-link">Campo eléctrico</a>
+                                            <a href="{% url 'buscador:view' 22 %}" class="primary-link">Campo eléctrico</a>
                                         </td>
                                         <td> 102 </td>
                                         <td> NO </td>
@@ -217,7 +217,7 @@
                                         <td class="fit">
                                         </td>
                                         <td>
-                                            <a href="{% url 'buscador:building' %}" class="primary-link">Campo Magnético</a>
+                                            <a href="{% url 'buscador:view' 24 %}" class="primary-link">Campo Magnético</a>
                                         </td>
                                         <td> 31 </td>
                                         <td> SI </td>
